--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,8 @@
 	<link rel="manifest" href="%PUBLIC_URL%/manifest.json">
 	<link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
 
+	<link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500" rel="stylesheet">
+
 	<title>WPI-API-React</title>
 </head>
 
